--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -3,7 +3,7 @@ nav.mb-4.hidden.sm:block
         a href="/"
             / img.h-12.mr-1 src=image_url("logos/logo.png") alt="navarit"
 
-        ul.flex.font-medium.ms-2.ps-4.cursor-pointer.md:p-0.border.border-gray-100.rounded-lg.md:flex-row.md:space-x-8.md:mt-0.md:border-0.dark:bg-gray-800.md:dark:bg-gray-900.dark:border-gray-700
+        ul.flex.flex-row.space-x-8.font-medium.ms-2.ps-4.cursor-pointer.p-0.rounded-lg
             = render "shared/navbar_link", link: dashboard_path, icon: :house, text: "domů"
             = render "shared/navbar_link", link: events_path, icon: :calendar, text: "akce"
             = render "shared/navbar_link", link: published_recipes_path, icon: "book-open", text: "databáze receptů"
@@ -17,5 +17,5 @@ nav.mb-4.hidden.sm:block
 
             div id="dropdown" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700"
                 ul class="py-2 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownDefaultButton"
-                    li.ps-2
-                        = button_to "odhlásit se", destroy_user_session_path, method: :delete, class: "hover:underline hover:emerald-600 hover:decoration-emerald-700 hover:decoration-4"
+                    li.ps-2.my-2 = link_to "nastavení", user_settings_path, class: "hover:underline hover:ocean-600 hover:decoration-ocean-700 hover:decoration-4"
+                    li.ps-2.my-2 = button_to "odhlásit se", destroy_user_session_path, method: :delete, class: "hover:underline hover:ocean-600 hover:decoration-ocean-700 hover:decoration-4"
